--- a/app/src/main/res/layout/buy_and_sell_2nd_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_2nd_layout.xml
@@ -11,6 +11,8 @@
     <LinearLayout
         android:paddingRight="@dimen/padding_spinner"
         android:paddingLeft="@dimen/padding_spinner"
+        android:paddingBottom="@dimen/padding_medium"
+        android:paddingTop="@dimen/padding_medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
