--- a/app/src/main/res/layout/buy_and_sell_4th_item.xml
+++ b/app/src/main/res/layout/buy_and_sell_4th_item.xml
@@ -103,31 +103,10 @@
             android:layout_width="0dp"
             android:layout_weight="1.5"
             android:layout_height="wrap_content"
-            android:gravity="left|center_vertical">
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView_order_list_up_4th"
-                    android:layout_width="@dimen/padding_spinner"
-                    android:layout_height="@dimen/padding_spinner"
-                    android:src="@drawable/arrow_up_image"/>
+            android:gravity="center">
 
 
 
-                <ImageView
-                    android:id="@+id/imageView_order_list_down_4th"
-                    android:layout_width="@dimen/padding_spinner"
-                    android:layout_height="@dimen/padding_spinner"
-                    android:src="@drawable/arrow_down_image"/>
-
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView_order_list_meghdar_4th"
@@ -141,14 +120,18 @@
                 android:textColor="@color/secondary_text"
                 android:textSize="@dimen/font_large" />
 
-            <ImageView
-                android:id="@+id/imageView_order_list_delete_4th"
+            <TextView
+                android:id="@+id/textView_order_list_unit_4th"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/padding_medium"
-                android:src="@drawable/shape_trash"
-                android:background="@drawable/shape_circle"
-                android:backgroundTint="@color/red"/>
+                android:gravity="center"
+                android:text="کیلو"
+                android:maxLines="1"
+                android:padding="@dimen/padding_bit"
+                app:fontPath="fonts/IRANSansWeb_Bold.ttf"
+                android:textColor="@color/secondary_text"
+                android:textSize="@dimen/font_large" />
+
 
         </LinearLayout>
 
