--- a/app/src/main/res/layout/buy_and_sell_show_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_show_layout.xml
@@ -50,6 +50,7 @@
                 android:backgroundTint="@color/primary_dark"
                 android:textColor="@color/icons"/>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/textView_buy_and_sell_hame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
