--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,10 +28,11 @@
     <dimen name="dimen_large">40dp</dimen>
     <dimen name="dimen_xlarge">45dp</dimen>
     <dimen name="dimen_xxlarge">50dp</dimen>
-    <dimen name="dimen_xxxlarge">45dp</dimen>
+    <dimen name="dimen_xxxlarge">55dp</dimen>
     <dimen name="dimen_icon">24dp</dimen>
     <dimen name="dimen_icon_box">48dp</dimen>
     <dimen name="dimen_item_height">99dp</dimen>
+    <dimen name="dimen_item_xheight">110dp</dimen>
 
 
     <dimen name="height_slider_main">170dp</dimen>
