--- a/app/src/main/res/layout/account_side_item.xml
+++ b/app/src/main/res/layout/account_side_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayout_account_side_main"
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical"
@@ -15,7 +15,8 @@ android:background="@drawable/shape_underline_dashed">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/padding_bit">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -145,26 +146,29 @@ android:background="@drawable/shape_underline_dashed">
             android:layout_weight="1"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="match_parent"
             android:gravity="left|center_vertical">
 
             <ImageView
                 android:id="@+id/imageView_acount_side_call"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/padding_medium"
                 android:backgroundTint="@color/primary_dark"
                 android:padding="@dimen/padding_small"
-                android:src="@drawable/shape_call_collapsed" />
+                app:srcCompat="@drawable/shape_call_collapsed" />
 
             <ImageView
                 android:id="@+id/imageView_acount_side_arrow"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary_dark"
                 android:padding="@dimen/padding_small"
-                android:src="@drawable/shape_arrow_drop_down_old" />
+                android:src="@drawable/shape_arrow_drop_down" />
 
         </LinearLayout>
 
