--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -7,8 +7,7 @@
     android:layout_height="wrap_content"
     android:layoutDirection="rtl"
     android:gravity="center_vertical"
-    android:padding="@dimen/padding_large"
-    android:layout_margin="@dimen/padding_small"
+    android:padding="@dimen/padding_medium"
     android:background="@drawable/shape_underline_dashed"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -100,12 +99,12 @@
             android:layout_width="0dp"
             android:layout_weight="1.5"
             android:layout_height="wrap_content"
-            android:gravity="left">
+            android:gravity="center_vertical|left">
 
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -137,9 +136,11 @@
 
             <ImageView
                 android:id="@+id/imageView_product_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.5"
+                android:layout_height="match_parent"
                 android:padding="@dimen/padding_medium"
+                android:scaleType="centerInside"
                 android:src="@drawable/shape_arrow_drop_down"/>
 
         </LinearLayout>
