--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,7 @@
     <dimen name="dimen_xlarge">45dp</dimen>
     <dimen name="dimen_xxlarge">50dp</dimen>
     <dimen name="dimen_xxxlarge">55dp</dimen>
+    <dimen name="dimen_xxxxlarge">80dp</dimen>
     <dimen name="dimen_icon">24dp</dimen>
     <dimen name="dimen_icon_box">48dp</dimen>
     <dimen name="dimen_item_height">99dp</dimen>
