--- a/app/src/main/res/layout/transaction_select_layout.xml
+++ b/app/src/main/res/layout/transaction_select_layout.xml
@@ -5,8 +5,7 @@
     android:orientation="vertical"
     android:layoutDirection="rtl"
     android:background="#E6242E42"
-    android:paddingRight="@dimen/fab_margin"
-    android:paddingBottom="@dimen/padding_xlarge"
+    android:paddingRight="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -18,8 +17,8 @@
 
         <ImageView
             android:scaleType="centerCrop"
-            android:layout_width="@dimen/dimen_large"
-            android:layout_height="@dimen/dimen_large"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/arrow_right"/>
         <TextView
             android:layout_width="wrap_content"
@@ -35,13 +34,13 @@
         android:id="@+id/linearLayout_pardakht_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_xxxlarge"
+        android:layout_marginBottom="@dimen/dimen_xxxxlarge"
         android:gravity="center_vertical">
 
         <ImageView
             android:scaleType="centerCrop"
-            android:layout_width="@dimen/dimen_large"
-            android:layout_height="@dimen/dimen_large"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/arrow_left"/>
         <TextView
             android:layout_width="wrap_content"
